--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,14 @@
+# php version
 FROM php:8.0.2-fpm
+
 RUN apt-get update && apt-get install -y \
     git \ 
     curl \
     zip \
-    unzip
+    unzip 
+
+# composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# workdir
 WORKDIR /var/www
